--- a/src/app/components/dashboard/userlist/userlist.component.html
+++ b/src/app/components/dashboard/userlist/userlist.component.html
@@ -59,10 +59,10 @@
       <td mat-cell *matCellDef="let element">
         <div fxLayout="row" fxLayoutAlign="center center">
           <button>
-            <mat-icon (click)="onEdit()">edit</mat-icon>
+            <mat-icon (click)="editUser(element)">edit</mat-icon>
           </button>
           <button>
-            <mat-icon (click)="onDelete()">delete</mat-icon>
+            <mat-icon (click)="onDelete(element)">delete</mat-icon>
           </button>
         </div>
       </td>
