--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,19 +7,19 @@
   background-color: white;
   display: flex;
   position: relative;
-  top: 45vh;
+  top: 25vh;
   justify-content: center;
   align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .form {
-  position: absolute;
+  position: flex;
   background-color: white;
   width: 360px;
   padding: 4rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
-  height: 35vh;
+  height: 32vh;
 }
 .form-title {
   font-weight: 550;
