--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -6,18 +6,18 @@
 .login-box {
   display: flex;
   position: relative;
-  top: 45vh;
+  top: 10vh;
   justify-content: center;
   align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .form {
-  position: absolute;
+  position: flex;
   width: 360px;
   padding: 4rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
-  height: 70vh;
+  height: 65vh;
 }
 .form-title {
   font-weight: 550;
