--- a/src/app/components/dashboard/userlist/userlist.component.html
+++ b/src/app/components/dashboard/userlist/userlist.component.html
@@ -13,7 +13,7 @@
         mat-sort-header
         sortActionDescription="Sort by Name"
       >
-        {{ "User_List.Name" | translate }}
+        {{ "UserList.Name" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
@@ -24,7 +24,7 @@
         mat-sort-header
         sortActionDescription="Sort by Last Name"
       >
-        {{ "User_List.LastName" | translate }}
+        {{ "UserList.LastName" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
     </ng-container>
@@ -35,7 +35,7 @@
         mat-sort-header
         sortActionDescription="Sort by Login"
       >
-        {{ "User_List.Login" | translate }}
+        {{ "UserList.Login" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.login }}</td>
     </ng-container>
@@ -46,14 +46,14 @@
         mat-sort-header
         sortActionDescription="Sort by Role"
       >
-        {{ "User_List.Role" | translate }}
+        {{ "UserList.Role" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ getRole(element.role) }}</td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>
         <div fxLayout="row" fxLayoutAlign="center center">
-          {{ "User_List.Action" | translate }}
+          {{ "UserList.Action" | translate }}
         </div>
       </th>
       <td mat-cell *matCellDef="let element">
