--- a/src/app/components/dashboard/add-product/addproduct.component.scss
+++ b/src/app/components/dashboard/add-product/addproduct.component.scss
@@ -1,4 +1,13 @@
-.input-style {
+.inputStyle {
   width: 600px;
-  margin-left: 14px;
+}
+.header {
+  font-size: 25px;
+  margin-bottom: 1vh;
+}
+.card {
+  margin-top: 6vh;
+}
+textarea {
+  resize: none;
 }
